--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
           <h4>PHARRELL WILLIAMS</h4>
           
-          <!-- Level 2 'HAPPY' Header -->
-
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h2>HAPPY</h2>
+          
+          <h4>| FROM DESPICABLE ME 2 |</h4>
 
         </div>
       </div>
